# ubicom32

ubicom-linux-dist-3.2.1/: Config.in  Makefile  Makefile.loader  README.build  version.in
ubicom-linux-dist-3.2.1/config/: README  create_board_config.sh  create_dir_configs.sh  create_lpj_config.sh
ubicom-linux-dist-3.2.1/linux-2.6.x/: MAINTAINERS  Makefile
ubicom-linux-dist-3.2.1/linux-2.6.x/crypto/: Kconfig
ubicom-linux-dist-3.2.1/linux-2.6.x/fs/: Kconfig  Kconfig.binfmt  Makefile  binfmt_elf_fdpic.c  binfmt_flat.c  fcntl.c  namei.c  splice.c
ubicom-linux-dist-3.2.1/linux-2.6.x/init/: Kconfig  (+1 more)
ubicom-linux-dist-3.2.1/openwrt/: Config.in  feeds.conf  rules.mk
ubicom-linux-dist-3.2.1/u-boot/: MAKEALL  Makefile  ubicom32_config.mk
ubicom-linux-dist-3.2.1/uClibc/: Makefile.in  Makerules  Rules.mak  ubicom32-linux-uclibc-v5.config  ubicom32-linux-uclibc.config  ubicom32-uclinux-v5.config
ubicom32toolchain/: build_all  config.sub  configall  configure  configure.ac  makefile  toolchain_install_instructions.txt
ubicom32toolchain/bfd/: Makefile.am  Makefile.in  archures.c  bfd-in2.h  compress.c  config.bfd  configure  configure.in  cpu-ubicom32.c  elf32-ubicom32.c  libbfd.h  reloc.c  targets.c
ubicom32toolchain/binutils/: Makefile.am  Makefile.in  readelf.c
ubicom32toolchain/dejagnu/: Makefile  Makefile.in
ubicom32toolchain/elf2flt/: Makefile.in  Ubicom32_README  config.sub  configure  configure.in  elf2flt.c  ld-elf2flt.in
ubicom32toolchain/gas/: Makefile.am  Makefile.in  configure  configure.in  configure.tgt
ubicom32toolchain/gcc/: config.sub  configure
ubicom32toolchain/gdb/: Makefile.in  configure.tgt  corelow.c  remote-ubicom32-dbginterface.c  remote-ubicom32-dbginterface.h  remote-ubicom32-isd.c  remote-ubicom32-isd.h  remote-ubicom32-posix-backend.c  remote-ubicom32-posix-backend.h  remote-ubicom32-posix.c  remote-ubicom32v3-dbginterface.c  remote-ubicom32v3-dbginterface.h  remote-ubicom32v3-isd.c  solib-ubicom32.c  target.c  target.h  ubicom32-tdep.c  ubicom32-tdep.h  ubicom32_dongle.c  ubicom32_dongle.h
ubicom32toolchain/gmp-4.2.2/: configure.in
ubicom32toolchain/include/: dis-asm_ubicom32.h
ubicom32toolchain/ld/: Makefile.am  Makefile.in  configure.tgt
ubicom32toolchain/libgloss/: configure  configure.in
ubicom32toolchain/mpfr-2.3.1/: configure
ubicom32toolchain/newlib/: Makefile  confdefs.h  configure.host  libtool
ubicom32toolchain/opcodes/: Makefile.am  Makefile.in  configure  configure.in  disassemble.c  ubicom32-asm.c  ubicom32-desc.c  ubicom32-desc.h  ubicom32-dis.c  ubicom32-ibld.c  ubicom32-opc.c  ubicom32-opc.h
ubicom32toolchain/readline/: configure
ubicom32toolchain/sid/: Makefile.in  aclocal.m4  configure  cscope.files
ubicom32toolchain/sid/component/cgen-cpu/ubicom32/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  hw-cpu-ubicom32.xml  hw-cpu-ubicom32mars.txt  ubicom32bf-cpu.h  ubicom32bf-decode.h  ubicom32bf-defs.h  ubicom32bf-desc.h  ubicom32bf.cxx  ubicom32bf.h  ubicom32saf.cxx
ubicom32toolchain/sid/component/cgen-cpu/ubicom32/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ubicom32toolchain/sid/component/loader/: Makefile.am  Makefile.in  VerilogLoader.cxx  elfload.c
ubicom32toolchain/sid/component/mailbox/: Makefile.am  Makefile.in  mbox.cxx  mbox.h
ubicom32toolchain/sid/component/timers/ubicom32/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  hw-timer-ubicom32_ref.xml  ubicom32-timer.h  ubicom32.cxx
ubicom32toolchain/sid/component/timers/ubicom32/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
ubicom32toolchain/sid/main/sidlib/: ChangeLog  Makefile.am  Makefile.in  cfgroot_interface.cxx  configure  configure.in  sidlib.cxx  simwcpu.cxx
ubicom32toolchain/sid/main/sidlib/CVS/: Entries  Repository
ubicom32toolchain/sid/main/sidlib/ip4k/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  ip4kcopro.cxx  ip4kcpu.cxx  ip4kmainpluscopro.cxx  ip4ksid.h  ip4ksidlib.txt
ubicom32toolchain/sid/main/sidlib/ip4k/CVS/: Entries  Repository
ubicom32toolchain/sid/main/sidlib/testsuite/: .#Makefile.in.1.1.1.1  ChangeLog  Makefile.in
ubicom32toolchain/sid/main/sidlib/testsuite/CVS/: Entries  Repository  Root
ubicom32toolchain/sid/main/sidlib/testsuite/config/: default.exp
ubicom32toolchain/sid/main/sidlib/testsuite/config/CVS/: Entries  Repository
ubicom32toolchain/sid/main/sidlib/testsuite/lib/: rundefs.exp
ubicom32toolchain/sid/main/sidlib/testsuite/lib/CVS/: Entries  Repository
ubicom32toolchain/sid/main/sidlib/testsuite/sidlib.ip4k/: ip4kcopro.out  ip4kcopro.out.conf  ip4kcopro.s  ip4kcopro_1.cxx  ip4kcopro_2.cxx  ip4kcopro_3.cxx  ip4kcopro_4.cxx  ip4kcopro_5.cxx  ip4kcpu.out.conf  ip4kcpu.s  ip4kcpu_1.cxx  ip4kcpu_2.cxx  ip4kcpu_3.cxx  ip4kcpu_4.cxx  ip4kcpu_5.cxx  ip4kmpc.out.conf  ip4kmpc_1.cxx  ip4kmpc_2.cxx  ip4kmpc_3.cxx  ip4kmpc_4.cxx  ip4kmpc_5.cxx  ip4kmpc_copro.s  ip4kmpc_main.out  ip4kmpc_main.s  ip4ksidlib.exp  test.h
ubicom32toolchain/sid/main/sidlib/testsuite/sidlib.ip4k/CVS/: Entries  Repository
ubicom32toolchain/sid/main/sidlib/testsuite/sidlib.ubicom32/: ChangeLog  test.h  ubicom32copro.out.conf  ubicom32copro_1.cxx  ubicom32copro_2.cxx  ubicom32copro_3.cxx  ubicom32copro_4.cxx  ubicom32copro_5.cxx  ubicom32cpu.out  ubicom32cpu.out.conf  ubicom32cpu.s  ubicom32cpu_1.cxx  ubicom32cpu_2.cxx  ubicom32cpu_3.cxx  ubicom32cpu_4.cxx  ubicom32cpu_5.cxx  ubicom32mpc.out.conf  ubicom32mpc_1.cxx  ubicom32mpc_2.cxx  ubicom32mpc_3.cxx  ubicom32mpc_4.cxx  ubicom32mpc_5.cxx  ubicom32mpc_copro.out  ubicom32mpc_copro.s  ubicom32mpc_main.s  ubicom32sidlib.exp  ubicomcopro.s
ubicom32toolchain/sid/main/sidlib/testsuite/sidlib.ubicom32/CVS/: Entries  Repository
ubicom32toolchain/sid/main/sidlib/ubicom32/: Makefile.am  Makefile.in  configure  configure.in  ubicom32copro.cxx  ubicom32cpu.cxx  ubicom32mainpluscopro.cxx  ubicom32mainplustimer.cxx  ubicom32sid.h  ubicom32sidlib.txt
ubicom32toolchain/sid/main/sidlib/ubicom32/CVS/: Entries  Repository
ubicom32toolchain/utils/: configure
(+1239 files in other folders)
