dnl Process this file with autoconf to produce a configure script.
AC_INIT(simwcpu.cxx)
AC_CONFIG_AUX_DIR(../../config)
AM_INIT_AUTOMAKE(sidlib,0.1)
AM_CONFIG_HEADER(config.h:config.in)

dnl automake support
AM_MAINTAINER_MODE
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CXXCPP
AC_EXEEXT
AC_LANG_CPLUSPLUS

AC_CHECK_LIB(m, main)

dnl Perform --target/--enable-targets processing.
CY_SIDTARGET_CHECK

# Add per-target-family subdirectories here
cpu_subdirs=
cpu_libs=
cpu_incl=
# start-sanitize-ip
if test $sidtarget_ubicom32 -eq 1; then
	cpu_subdirs="$cpu_subdirs ubicom32"
fi
# end-sanitize-ip

dnl Check if we need libintl.
AC_MSG_CHECKING([whether libintl is required for gettext])
AC_LANG_SAVE
AC_LANG_C
AC_TRY_LINK_FUNC([textdomain],
  [INTLLIBS=; INTLLIBS_EXTERNAL=; INTLLIBS_INSTALL=; AC_MSG_RESULT([no])],
  [INTLLIBS='-L../../../intl -lintl']; INTLLIBS_EXTERNAL='../../../intl/libintl.a'; INTLLIBS_INSTALL=libintl.a; AC_MSG_RESULT([yes]))
AC_LANG_RESTORE


for dir in $cpu_subdirs; do
	cpu_libs="$cpu_libs $dir/libsid$dir.la"
	cpu_incl="$cpu_incl -I$srcdir/$dir"
done

dnl In the following, $cpu_subdirs is expanded at configure run time
AC_CONFIG_SUBDIRS($cpu_subdirs)
AC_SUBST(cpu_subdirs)
AC_SUBST(cpu_incl)
AC_SUBST(cpu_libs)
AC_SUBST(INTLLIBS)
AC_SUBST(INTLLIBS_INSTALL)
AC_SUBST(INTLLIBS_EXTERNAL)
AM_CONDITIONAL(HAVE_EXTERNAL_INTLLIB, test x$INTLLIBS_EXTERNAL != x)

dnl building docs
RH_DOCBUILD_CHECK

dnl Outputs
AC_OUTPUT(Makefile testsuite/Makefile)
